Inclass demo, completed successfully,

--- a/template.yaml
+++ b/template.yaml
@@ -1,5 +1,18 @@
 Resources:
- ATUec2: 
+
+ EC2DemoSG: 
+  Type: AWS::EC2::SecurityGroup
+  Properties:
+   GroupName: Demo1
+   GroupDescription: For EC2 Demo1
+   VpcId: vpc-0c4e9792ce2b436a3
+   SecurityGroupIngress:
+     - IpProtocol: tcp
+       FromPort: 22
+       ToPort: 22
+       CidrIp: 172.31.0.0/16
+
+ EC2Instance: 
   Type: AWS::EC2::Instance
   Properties:
    ImageId: ami-033a3fad07a25c231
@@ -16,21 +29,10 @@ Resources:
     - Key: CostCenter
       Value: Eng
 
- EC2DemoSG: 
-  Type: AWS::EC2::SecurityGroup
-  Properties:
-   GroupName: Demo1
-   GroupDescription: For EC2 Demo1
-   VpcId: vpc-0c4e9792ce2b436a3
-   SecurityGroupIngress:
-     - IpProtocol: tcp
-       FromPort: 22
-       ToPort: 22
-       CidrIp: 172.31.0.0/16
-
 Outputs:
   OutEC2Demo:
   #set of outputs, value references the resource, export the field
     Description: AWS::EC2::Instance
-    Value: !Ref ATUec2
-    Export:
+    Value: !Ref EC2Instance
+    Export: 
+      Name: !Sub "${AWS::StackName}-EC2InstanceID"
