--- a/template.yaml
+++ b/template.yaml
@@ -116,6 +116,15 @@ Resources:
               - 'sts:AssumeRole'
       Path: '/'
 
+  LambdaPermissionForApiGateway:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref LambdaFunction
+      Action: lambda:InvokeFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub arn:aws:execute-api:eu-west-1:596797808861:qe56k4z6k3/*/GET/ip
+
+
 #improve security by requiring password access to the API, without API key the endpoint is public
 #usage plan limits it's use, makes it so its only used when required, which is cost effective and also improves security
   APIKey:
